platform_versioned_docs/version-4.10.0/integrations/argocd/deploy-applications.mdx
---
title: Deploy applications
sidebar_label: Deploy applications
sidebar_position: 4
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Button from "@site/src/components/Button";
import Label from "@site/src/components/Label";

This guide covers declaring Argo CD Applications in your Platform configuration after a connector is enabled. Platform reconciles these declarations into `ArgoCDApplication` objects and syncs them to your Argo CD instance.

## Prerequisites

- A connector is already configured and enabled on the target cluster. See [Connect to Argo CD](./connect-argocd.mdx) or [Connect to Akuity](./connect-akuity.mdx).

## Application templates

An `ArgoCDApplicationTemplate` is a reusable Argo CD ApplicationSpec. Create one when you want to deploy the same application definition across multiple tenant clusters without duplicating configuration.

<Tabs
  defaultValue="ui"
  values={[
    { label: "Platform UI", value: "ui" },
    { label: "YAML", value: "yaml" },
  ]}
>
  <TabItem value="ui">

<Flow>
  <Step>
    Go to <NavStep>Management > Apps</NavStep> and, if shown, click the <Label>ArgoCD Apps</Label> tab.
  </Step>
  <Step>
    Click <Button>Create Argo CD Template</Button>.
  </Step>
  <Step>
    In the <Label>Basics</Label> section, enter a <Label>Display name</Label> for the template.
    The <Label>Argo CD Template ID</Label> is auto-generated from the display name and is the identifier you reference in your applications.
    Optionally add a <Label>Description</Label>.
  </Step>
  <Step>
    In the <Label>Config Options</Label> section, fill in the YAML editor with the Argo CD ApplicationSpec.
  </Step>
  <Step>
    Click <Button>Add Argo CD Template</Button>.
  </Step>
</Flow>

  </TabItem>
  <TabItem value="yaml">

```yaml
apiVersion: management.loft.sh/v1
kind: ArgoCDApplicationTemplate
metadata:
  name: app-template
spec:
  template:
    spec:
      source:
        repoURL: "https://github.com/acme/app-charts"
        targetRevision: "main"
        path: "app"
      project: default
      syncPolicy:
        automated:
          prune: true
          selfHeal: true
```

  </TabItem>
</Tabs>

## Application naming

Every application has two name fields: `name` and `displayName`.

`name` is the Kubernetes resource name for the `ArgoCDApplication` object. It must be unique within the project namespace.
Platform checks explicitly defined names against existing `ArgoCDApplication` resources in the same project namespace. A name already owned by another tenant cluster is rejected.

`displayName` is the label shown in the Platform UI. `displayName` defined in `vcluster.yaml` must be unique across all the applications defined in the `vcluster.yaml`.

### Name modes

* **Set `name` explicitly:** Platform uses it as the Kubernetes resource name. If `displayName` is not set, it defaults to the value of `name`.
* **Set `displayName` only:** Omit `name` and specify only `displayName`. Platform automatically generates a unique Kubernetes resource name.
* **Set neither field:** When defined in `vcluster.yaml`, Platform rejects the configuration with a validation error.
When creating an application through the UI or Management API, Platform automatically generates a resource name if one is not provided.


:::info Argo CD name uniqueness
Argo CD requires application names to be unique across all projects. Platform satisfies this by appending the project name when registering the application in Argo CD.
:::

## Deploy to a tenant cluster

Applications deployed to a tenant cluster are declared in the cluster's `vcluster.yaml` under `deploy.argoCD.applications`. Each entry can target:

- **`vcluster`** (default): the tenant cluster itself
- **`host`**: the control plane cluster the tenant cluster runs on (see [Deploy to the control plane cluster](#deploy-to-the-control-plane-cluster))

<Tabs
  defaultValue="ui"
  values={[
    { label: "Platform UI", value: "ui" },
    { label: "YAML", value: "yaml" },
  ]}
>
  <TabItem value="ui">

<Tabs
  defaultValue="new"
  values={[
    { label: "New tenant cluster", value: "new" },
    { label: "Existing tenant cluster", value: "existing" },
  ]}
>
  <TabItem value="new">

<Flow>
  <Step>
    Select your project from the project selector at the top left.
  </Step>
  <Step>
    Navigate to <Label>Tenant Clusters</Label> and click <Button>Create Tenant Cluster</Button>.
  </Step>
  <Step>
    Click `Continue Without a Template`, select the wanted type of tenant cluster 
    then click <Button>Continue to Configuration</Button>.
    
    Optionally select a cluster template, then configure it. The template 
    must have been created to allow ArgoCD Applications configuration. 
    
  </Step>
  <Step>
    Select the <Label>Argo CD Integration</Label> tab in the cluster creation form.
  </Step>
  <Step>
   Click on the slider `Enable Argo CD Integration`
  </Step>
  <Step>
    Select a `Connector` in the dropdown list of connectors 
    or click `Configure Argo CD Connectors` to configure a connector.
  </Step>
  <Step>
    Click <Button>Add Argo CD Application</Button>.
  </Step>
  <Step>
    In the <Label>Basics</Label> section, enter a <Label>Display Name</Label> for the application.
    The <Label>Argo CD Application ID</Label> is auto-generated and uniquely identifies the application in Argo CD.
  </Step>
  <Step>
    Choose where to deploy:
    - Select <Label>Deploy to tenant cluster</Label> to deploy into the tenant cluster itself.
    - Select <Label>Deploy to control plane cluster</Label> to deploy into the control plane cluster the tenant cluster runs on. The control plane cluster must already have an Argo CD connector configured.
  </Step>
  <Step>
   Select a <Label>Template</Label> or choose <Label>Inline application spec</Label> from the <Label>Argo CD Application Template</Label> dropdown.
  </Step>
  <Step>
    If you choose a <Label>Template</Label>, fill the <Label>Template Parameters</Label> if needed.

    If you choose <Label>Inline application spec</Label>, fill the <Label>Argo CD Application Spec</Label>.

    You can make additional change directly in the YAML editor.
  </Step>
  <Step>
    Click <Button>Save</Button> to add the ArgoCD Application to the tenant cluster.
  </Step>
  <Step>
    Complete the remaining cluster configuration and click <Button>Create Tenant Cluster</Button>.
  </Step>
</Flow>

  </TabItem>
  <TabItem value="existing">

<Flow>
  <Step>
    Select your project from the project selector at the top left.
  </Step>
  <Step>
    Navigate to <Label>Tenant Clusters</Label> and open the tenant cluster where you want to deploy an application.
  </Step>
  <Step>
    Select the <Label>ArgoCD Apps</Label> tab in the cluster detail view.
  </Step>
  <Step>
    Click <Button>Add Argo CD Application</Button>.
  </Step>
  <Step>
    In the <Label>Basics</Label> section, enter a <Label>Display Name</Label> for the application.
    The <Label>Argo CD Application ID</Label> is auto-generated and uniquely identifies the application in Argo CD.
  </Step>
  <Step>
    Choose where to deploy:
    - Select <Label>Deploy to tenant cluster</Label> to deploy into the tenant cluster itself.
    - Select <Label>Deploy to control plane cluster</Label> to deploy into the control plane cluster the tenant cluster runs on. The control plane cluster must already have an Argo CD connector configured.
  </Step>
  <Step>
   Select a <Label>Template</Label> or choose <Label>Inline application spec</Label> from the <Label>Argo CD Application Template</Label> dropdown.
  </Step>
  <Step>
    If you choose a <Label>Template</Label>, fill the <Label>Template Parameters</Label> if needed.

    If you choose <Label>Inline application spec</Label>, fill the <Label>Argo CD Application Spec</Label>.

    You can make additional change directly in the YAML editor.
  </Step>
  <Step>
    Click <Button>Save</Button> to add the ArgoCD Application to the tenant cluster.
  </Step>
  <Step>
    Click <Button>Add Argo CD Application</Button>.
  </Step>
</Flow>

  </TabItem>
</Tabs>

  </TabItem>
  <TabItem value="yaml">

Add the `deploy.argoCD.applications` block to the tenant cluster's `vcluster.yaml`. Set `target: vcluster` to deploy into the tenant cluster (this is the default) or `target: host` to deploy into the control plane cluster it runs on.

<Tabs
  defaultValue="template"
  values={[
    { label: "Template reference", value: "template" },
    { label: "Inline spec", value: "inline" },
  ]}
>
  <TabItem value="template">

```yaml
deploy:
  argoCD:
    applications:
      - name: myapp            # omit this to generate the name or ensure that the defined name is unique across the project
        displayName: "My Application"
        target: vcluster       # or "host" to target the control plane cluster
        template:
          name: app-template   # references an ArgoCDApplicationTemplate
```

  </TabItem>
  <TabItem value="inline">

```yaml
deploy:
  argoCD:
    applications:
      - name: grafana             # omit this to generate the name or ensure that the defined name is unique across the project
        displayName: "Grafana"
        target: vcluster          # or "host" to target the control plane cluster
        inline:
          source:
            repoURL: "https://github.com/acme/charts"
            targetRevision: HEAD
            path: grafana
          project: default
          syncPolicy:
            automated:
              prune: true
              selfHeal: true
          destination:
            namespace: `default destination`
```

  </TabItem>
</Tabs>

  </TabItem>
</Tabs>

### Deploy to the control plane cluster

Setting `target: host` deploys the application onto the control plane cluster rather than inside the tenant cluster. Use this for shared infrastructure — monitoring agents, logging collectors, or networking components — that belongs on the underlying cluster rather than inside a tenant cluster.

:::warning Understand the access boundary before using `target: host`
`target: host` allows configuration inside a tenant cluster to affect workloads on the control plane cluster. Before enabling this, consider:

- **Who controls the tenant cluster configuration?** If tenants can edit `vcluster.yaml` directly, they can deploy arbitrary workloads onto the control plane cluster. Restrict this to platform admins or use cluster templates to limit what values tenants can set.
- **The control plane cluster must have a connector.** If the control plane cluster does not have an Argo CD connector configured, applications with `target: host` will fail to deploy.
- **Applications deploy into a specific namespace.** The `destination.namespace` in the argoCDApplication field determines where the application lands on the control plane cluster. Ensure that deploying in that namespace wouldn't cause any disruption on the control plane cluster.

This is a platform-admin-level capability. Do not expose it to end users without proper guardrails.
:::

:::info Prerequisite for `target: host`
The control plane cluster the tenant cluster runs on must already be registered with an Argo CD connector. Complete the connector setup for the control plane cluster first (see [Connect to Argo CD](./connect-argocd.mdx#on-a-control-plane-cluster) or [Connect to Akuity](./connect-akuity.mdx#on-a-control-plane-cluster)).
:::

## Deploy to a control plane cluster

Applications deployed directly onto a control plane cluster are created as `ArgoCDApplication` objects in the project namespace. This is the recommended pattern for shared infrastructure that should live on the underlying cluster rather than inside a tenant cluster.

<Tabs
  defaultValue="ui"
  values={[
    { label: "Platform UI", value: "ui" },
    { label: "YAML", value: "yaml" },
  ]}
>
  <TabItem value="ui">

<Flow>
  <Step>
    Go to <NavStep>Infrastructure > Control Plane Clusters</NavStep>.
  </Step>
  <Step>
    Click the name of the control plane cluster to open its detail page.
  </Step>
  <Step>
    Select the <Label>ArgoCD Apps</Label> tab in the cluster header.
  </Step>
  <Step>
    Click <Button>Add Argo CD Application</Button>.
  </Step>
  <Step>
    In the <Label>Basics</Label> section, enter a <Label>Display Name</Label> for the application.
    The <Label>Argo CD Application ID</Label> is auto-generated from the display name.
  </Step>
  <Step>
   Select a <Label>Template</Label> or choose <Label>Inline application spec</Label> from the <Label>Argo CD Application Template</Label> dropdown.
  </Step>
  <Step>
    If you choose a <Label>Template</Label>, fill the <Label>Template Parameters</Label> if needed.

    If you choose <Label>Inline application spec</Label>, fill the <Label>Argo CD Application Spec</Label>.

    You can make additional change directly in the YAML editor.
  </Step>
  <Step>
    Click <Button>Create Argo CD Application</Button>.
  </Step>
</Flow>

  </TabItem>
  <TabItem value="yaml">

Create an `ArgoCDApplication` object in the project namespace. Use `spec.destination.cluster` to target the control plane cluster by name.

<Tabs
  defaultValue="template"
  values={[
    { label: "Template reference", value: "template" },
    { label: "Inline spec", value: "inline" },
  ]}
>
  <TabItem value="template">

```yaml
apiVersion: management.loft.sh/v1
kind: ArgoCDApplication
metadata:
  name: shared-infra
  namespace: p-my-project       # replace with your project namespace
spec:
  displayName: "Shared Infrastructure"
  destination:
    cluster:
      name: loft-cluster        # replace with your control plane cluster name
  templateRef:
    name: infra-template        # references an ArgoCDApplicationTemplate
```

  </TabItem>
  <TabItem value="inline">

```yaml
apiVersion: management.loft.sh/v1
kind: ArgoCDApplication
metadata:
  name: cluster-monitoring
  namespace: p-my-project       # replace with your project namespace
spec:
  displayName: "Cluster Monitoring"
  destination:
    cluster:
      name: loft-cluster        # replace with your control plane cluster name
  template:
    spec:
      source:
        repoURL: "https://github.com/acme/charts"
        targetRevision: HEAD
        path: monitoring
      project: default
      syncPolicy:
        automated:
          prune: true
          selfHeal: true
```

  </TabItem>
</Tabs>

  </TabItem>
</Tabs>

:::warning Disabling the integration
Disabling `integrations.argoCD.enabled` on a tenant cluster, or removing `spec.argoCD` from a control plane cluster, removes the cluster from Argo CD and deletes every `ArgoCDApplication` object Platform generated for it from `deploy.argoCD.applications`. This is a cascading delete. Argo CD also removes the Kubernetes resources those Applications were managing, not just the Application registration. Standalone `ArgoCDApplication` objects you created directly, like the one in [Deploy to a control plane cluster](#deploy-to-a-control-plane-cluster) above, keep their CR when you disable the integration alone. Once the destination's connector stops resolving, Platform still deletes the standalone object's remote Argo CD Application the same way, cascading to the workloads it managed, and marks the CR's `Synced` condition `False` until the cluster registers again. Deleting the tenant cluster itself deletes every `ArgoCDApplication` targeting it, standalone or not, along with the workloads those applications managed.
:::

The Platform UI keeps these two settings in order. The guided `vcluster.yaml` editor only shows the Applications section once the integration is enabled with a connector, and disabling the integration through the UI prompts you to confirm removing any configured applications, stripping them from `deploy.argoCD.applications` as part of the disable.

Editing `vcluster.yaml` directly doesn't enforce that order. Entries in `deploy.argoCD.applications` stay inert until the integration is enabled with a connector, and disabling directly doesn't remove them from the file. They just stop producing `ArgoCDApplication` objects until you re-enable the integration.
